# adveritas

./: .gitignore  AWS_BEDROCK_SETUP.md  COMMANDS.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  README_DEPLOYMENT.md  START_HERE.txt  VERCEL_DEPLOYMENT.md  docker-compose.yml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  env.production.example  nixpacks.toml  pyproject.toml  render.yaml  requirements.txt
backend/adveritas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: alembic.ini  asr.py  celery_app.py  claim_tasks.py  claims_extract.py  db.py  embeddings.py  evidence_retrieval.py  evidence_tasks.py  ingest.py  main.py  models.py  schemas.py  storage.py  tasks.py  verdict_tasks.py  verdicts.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 1feb5a72f382_add_evidence_table.py  add_thumbnail_url.py
backend/app/routers/: claims.py  evidence.py  verdicts.py  videos.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_verdicts.py
docs/: QUICK_DEPLOY.md  RAILWAY_DEPLOY_GUIDE.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
scripts/: test_pipeline.sh
