[project]
name = "adveritas-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "SQLAlchemy==2.0.35",
  "psycopg[binary]==3.2.3",
  "alembic==1.13.2",
  "redis==5.0.8",
  "celery==5.4.0",
  "boto3==1.35.36",
  "python-multipart==0.0.12",
  "httpx==0.27.2",
  "fastapi-cors==0.0.6",
]

[tool.uvicorn]
factory = true
